--- a/.github/workflows/external-map-data-upload.yml
+++ b/.github/workflows/external-map-data-upload.yml
@@ -23,8 +23,8 @@ jobs:
           mkdir to_upload
 
           curl -o to_upload/afetyardimalanlari-org-ankara.json "https://pfkuirisqb.execute-api.eu-central-1.amazonaws.com/sites?cityFilter=Ankara"
-          curl -o to_upload/afetyardimalanlari-org-istanbul.json "https://pfkuirisqb.execute-api.eu-central-1.amazonaws.com/sites?cityFilter=İstanbul"
-          curl -o to_upload/afetyardimalanlari-org-izmir.json "https://pfkuirisqb.execute-api.eu-central-1.amazonaws.com/sites?cityFilter=İzmir"
+          curl -o to_upload/afetyardimalanlari-org-istanbul.json "https://pfkuirisqb.execute-api.eu-central-1.amazonaws.com/sites?cityFilter=%C4%B0stanbul"
+          curl -o to_upload/afetyardimalanlari-org-izmir.json "https://pfkuirisqb.execute-api.eu-central-1.amazonaws.com/sites?cityFilter=%C4%B0zmir"
 
       - name: Sync JSON files
         run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/maps/external/
