--- a/.github/workflows/external-map-data-upload.yml
+++ b/.github/workflows/external-map-data-upload.yml
@@ -2,9 +2,10 @@ name: External Map data upload
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - feat/external-markers
+
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: "*/6 * * * *" # Run every 6 minutes
 
 jobs:
   deploy:
