--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -61,8 +61,8 @@ jobs:
         run: |
           python ./data/combine.py ./data/latest_datasets > ./data/to_upload/latest.json
 
-          # curl -O https://s3.eu-central-1.amazonaws.com/cdn.afetbilgi.com/schema.json
-          # python data/integrity_validator.py validate schema.json ./data/to_upload/latest.json
+          curl -O https://s3.eu-central-1.amazonaws.com/cdn.afetbilgi.com/schema.json
+          python data/integrity_validator.py validate schema.json ./data/to_upload/latest.json
 
           python data/integrity_validator.py generate ./data/to_upload/latest.json ./schema.json
           aws s3 cp ./schema.json s3://cdn.afetbilgi.com
