--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -73,3 +73,10 @@ jobs:
 
       - name: Sync JSON files
         run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
+
+      - name: Purge cache
+        uses: nathanvaughn/actions-cloudflare-purge@master
+        with:
+          cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
+          cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
+          files: http://cdn.afetbilgi.com/index.json http://cdn.afetbilgi.com/schema.json https://cdn.afetbilgi.com/index.json https://cdn.afetbilgi.com/schema.json
