--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -2,6 +2,9 @@ name: Data upload (cronjob)
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - yigit/add-new-tab
 
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -52,6 +55,7 @@ jobs:
           python ./akaryakit.py ../latest_datasets/akaryakit.json
           python3 ./eczane_local.py ../latest_datasets/eczane_local.json
           python3 ./digital_platforms.py ../latest_datasets/digital_platforms.json
+          python3 ./services.py ../latest_datasets/services.json
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/blood.json ../latest_datasets/blood.json
@@ -72,4 +76,4 @@ jobs:
           gzip -9 -c ./data/to_upload/latest.json > "./data/to_upload/datasets/`date +%Y-%m-%d_%H-%M-%S`.json.gz"
 
       - name: Sync JSON files
-        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com
+        run: aws s3 sync ./data/to_upload/. s3://cdn.afetbilgi.com/yigit
