--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -52,6 +52,7 @@ jobs:
           python ./akaryakit.py ../latest_datasets/akaryakit.json
           python3 ./eczane_local.py ../latest_datasets/eczane_local.json
           python3 ./digital_platforms.py ../latest_datasets/digital_platforms.json
+          python3 ./services.py ../latest_datasets/services.json
 
           cp ../datasets/vpn.json ../latest_datasets/vpn.json
           cp ../datasets/blood.json ../latest_datasets/blood.json
