--- a/.github/workflows/map-data-upload.yaml
+++ b/.github/workflows/map-data-upload.yaml
@@ -35,4 +35,4 @@ jobs:
           aws s3 cp ./latest.json "s3://afetbilgi-backup/map-datasets/`date +%Y-%m-%d_%H-%M-%S`.json"
 
       - name: Sync JSON files
-        run: aws s3 cp ./latest.json s3://cdn.afetbilgi.com/maps
+        run: aws s3 cp ./latest.json s3://cdn.afetbilgi.com/maps/latest.json
